# mcbs

./: CMakeLists.txt  README.md  readme.txt
Code/: CMakeLists.txt  readme.txt
Code/CppTest/: CMakeLists.txt  SplineData.cpp  SplineData.h  testSpline.cpp
Code/Freebies/: CMakeLists.txt  DofCfg.cpp  DofCfg.h  FindOpenSim.cmake  LmtMaFromOpenSim.cpp  LmtMaFromOpenSim.h  MusclesCfg.cpp  MusclesCfg.h  OpenSim2StdTools.cpp  OpenSim2StdTools.h  README.md  ReadMuscles.cpp  ReadMuscles.h  SplineSet.cpp  SplineSet.h  computeCoefficients.cpp  generateLmtGridWithOpenSim.cpp  generateLmtMaEvalGridsWithOpenSim.cpp  generateLmtMaWithSplineCoefficients.cpp  runFreebies.sh
Code/MatlabTest/: readme.txt  splineMatlab.m
Code/PythonScripts/: compare.py  plotboth.py
Code/SplineSrc/: CMakeLists.txt  Spline.cpp  Spline.h  SplineBasisFunction.cpp
Code/SplineSrc/include/mcbs/: Spline.cpp  Spline.h  SplineBasisFunction.h
Code/cppTest/: CMakeLists.txt  SplineData.cpp  readme.txt
Code/matlabTest/: SplineBasisDerivative.m  createSpline.cpp  evalSpline.cpp  writeOutputFile.m
Code/src/: Spline.cpp  Spline.h  SplineBasisFunction.cpp  SplineBasisFunction.h
Data/4DofHrHaHfKf/Extended/BetweenNodesData/: angles.in  maHa.in  maHf.in
Data/4DofHrHaHfKf/Extended/InputData/: lmt.in
Data/4DofHrHaHfKf/Extended/NodesData/: maHa.in  maKf.in
Data/4DofHrHaHfKf/Reduced/BetweenNodesData/: angles.in  maHa.in  maHf.in  maKf.in
Data/4DofHrHaHfKf/Reduced/InputData/: lmt.in
Data/4DofHrHaHfKf/Reduced/NodesData/: lmt.in  maHr.in
code/: CMakeLists.txt  README.md  mcbsConfig.cmake.in
code/examples/: CMakeLists.txt  README.md  computeCoefficients.cpp  generateLmtGridWithOpenSim.cpp  generateLmtMaEvalGridsWithOpenSim.cpp  generateLmtMaWithSplineCoefficients.cpp  runExamples.sh
code/lib/: CMakeLists.txt
code/lib/LmtMaFromOpenSim/: CMakeLists.txt  LmtMaFromOpenSim.cpp  LmtMaFromOpenSim.h
code/lib/Spline/: CMakeLists.txt  SplineBasisFunction.cpp
code/lib/Spline/include/mcbs/: Spline.cpp  Spline.h  SplineBasisFunction.h
code/lib/SplineSetHelper/: CMakeLists.txt  DofCfg.cpp  MusclesCfg.cpp  SplineSet.cpp  SplineSetCreator.cpp
code/lib/SplineSetHelper/include/mcbs/: DofCfg.h  MusclesCfg.h  SplineSet.h  SplineSetBase.h  SplineSetCreator.h
code/scripts/: compare.py  plotboth.py
code/src/: CMakeLists.txt  osimSplinerGeneric.cpp
code/tests/: CMakeLists.txt
code/tests/cppTest/: CMakeLists.txt  SplineData.h
code/tests/matlabTest/: SplineBasisFunction.m  createSpline.cpp  evalSpline.cpp  evalSplineMatlab.m
data/exampleData/: Readme.md
data/exampleData/computeCoefficients/Input/: lmt.in
data/exampleData/generateLmtGridWithOpenSim/Input/: dofAngles.cfg
data/exampleData/generateLmtMaEvalGridsWithOpenSim/Input/: angles.in  muscles.in
data/exampleData/generateLmtMaEvalGridsWithOpenSim/Output/: Readme.txt
data/exampleData/generateLmtMaWithSplineCoefficients/Input/: muscles.in
data/testData/: readme.txt
data/testData/4DofHrHaHfKf/Extended/BetweenNodesData/: lmt.in  maHr.in  maKf.in
data/testData/4DofHrHaHfKf/Extended/NodesData/: angles.in  lmt.in  maHf.in  maHr.in
data/testData/4DofHrHaHfKf/Reduced/BetweenNodesData/: lmt.in  maHr.in
data/testData/4DofHrHaHfKf/Reduced/NodesData/: angles.in  maHa.in  maHf.in  maKf.in
